finished swiper, added scrolling to section

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,8 @@
       "components/*": ["components/*"],
       "modules/*": ["modules/*"],
       "types/*": ["types/*"],
-      "hooks/*": ["hooks/*"]
+      "hooks/*": ["hooks/*"],
+      "helpers/*": ["helpers/*"]
     },
     /* Linting */
     "strict": true,
